portfolio page update

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
   <main>
     <section id="main-content">
-      <h1 class="heading">Contact</h1>
+      <h1 id="brand" class="heading">Contact</h1>
       <hr>
       <div id="form">
         <p>
