Contact page fix header resize on 640px

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="main-content">
       <h1 class="heading">About Me</h1>
       <hr>
-      <img src="http://via.placeholder.com/200x200" alt="Rene" class="profilepic">
+      <img src="assets/images/profile.jpg" alt="Rene" class="profilepic">
       <p class="text">I subscribe to three basic principles - understand what's to be done before
         doing it, use the right tools for the job, and make it work, make it right,
         THEN make it fast. A problem solver with a new found passion for learning
