Fixed headers and images for 640px

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div id="headtainer">
-      <div class="name heading">Rene Mojica</div>
+      <div id="brand" class="name heading">Rene Mojica</div>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -25,7 +25,7 @@
 
   <main>
     <section id="main-content">
-      <h1 id="brand" class="heading">Contact</h1>
+      <h1 class="heading">Contact</h1>
       <hr>
       <div id="form">
         <p>
